# uav-search-project

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  README.md  config.env.docker  config.env.example  docker-compose.yml
.devcontainer/: devcontainer.json
artifacts/rl/: benchmark_20260423.json
artifacts/sitl_eval/: comparison_grid_vs_rl_90s_20260430T174117Z.json  comparison_grid_vs_rl_90s_20260430T174117Z.md
docker/: Dockerfile  README.md  build-uxrce.sh  entrypoint.sh
pyflyt_rl/: .gitignore  README.md  eval.py  requirements-macos-cpu.txt  sim.py  train.py
scripts/: drone_sweep.py  launch_detection.bash  launch_mavsdk_smoke.bash  launch_planning.bash  launch_sim.bash  launch_sitl_eval.bash  launch_training.bash  plot_rl_training_visuals.py  probe_takeoff_world.bash  px4_command_bridge.py  px4_pose_bridge.py  reset_gazebo_drone.bash  run_sitl_policy_eval.bash  smoke_mavsdk_sitl.bash  view_camera.py
src/uav_rl/: package.xml  setup.cfg  setup.py
src/uav_rl/config/: search_policy.yaml  search_policy_v2.yaml  search_policy_v2_stage1_snapshot.yaml
src/uav_rl/resource/: uav_rl
src/uav_rl/test/: test_pyflyt_runtime_adapter.py  test_rl_common.py  test_search_task_env.py  test_search_task_env_v2.py
src/uav_rl/uav_rl/: __init__.py  actions.py  belief_map.py  camera_model.py  detection_memory.py  eval_search_policy.py  eval_search_policy_v2.py  observation_v2.py  pyflyt_runtime_adapter.py  reward.py  rl_common.py  rl_mission_controller.py  search_task_env.py  search_task_env_v2.py  train_search_policy.py  train_search_policy_v2.py
worlds/: search_area.sdf
(+162 files in other folders)
